# cost-eco-model-linker

./: .gitignore  .readthedocs.yaml  README.md  calculate_metrics.py  cost_calculations.py  example-process-rme-runs.py  process_RME_data.py  pyproject.toml  reef_distances.py
datasets/: Heneghan_RCI.csv  econ_spatial.csv
docs/source/: Heneghan_RCI.csv  conf.py  config.json  configuration.rst  cost_models.rst  cost_output_template.csv  example_workflow.rst  index.rst  interventionID_ecol0_intervention_var_rci.csv  intervention_ID_key_test_results_econ_metrics.csv  metrics.rst  output_file_format.rst
src/: calculate_metrics.py  config.csv  cost_calculations.py  example-process-rme-runs.py  process_RME_data.py  reef_distances.py
src/datasets/: ExpertReefCondition_AllResults.csv
